# advent-of-code-2025

./: .gitignore  README.md
1/: CMakeLists.txt  main.cpp
2/: CMakeLists.txt  main.cpp
3/: CMakeLists.txt  main.cpp
4/: CMakeLists.txt  main.cpp
5/: CMakeLists.txt  main.cpp
6/: CMakeLists.txt  main.cpp
7/: CMakeLists.txt  main.cpp
8/: CMakeLists.txt  main.cpp
